<resources>
    <string name="aisle_or_section_name_label">Aisle or Grocery Section</string>
    <string name="app_name">HoneyGoGroceryShoppping</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="conform_delete_item_message">Are you sure you want to delete %s from your list of pantry items?</string>
    <string name="delete_pantry_item">Delete</string>
    <string name="empty_pantry_list_message">No pantry items exist.</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="new_pantry_item">New Pantry Item</string>
    <string name="pantry_item_name_hint">Enter a name for the pantry item.</string>
    <string name="pantry_item_name_label">Name</string>
    <string name="pantry_item_locations_label">Locations</string>
    <string name="pantry_item_quantity_label">Quantity</string>
    <string name="pantry_item_selected_label">Include In Shopping List</string>
    <string name="pantry_item_quantity_number">Number</string>
    <string name="pantry_item_quantity_unit">Unit</string>
    <string name="pantry_item_description_hint">Enter a description of the item</string>
    <string name="quantity_label">Aisle or Grocery Section</string>
    <string name="send_to_text">Send To</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="store_label">Store</string>
    <string name="subtitle_format">%d pantry items</string>
    <string name="unit_label">Aisle or Grocery Section</string>
    <string name="pantry_item_selectbydefault_label">Include By Default</string>
    <string name="pantry_item_quantity_unit_hint">Unit</string>
    <string name="pantry_item_quantity_hint">Amount</string>
    <string name="pantry_item_name_required">Name is required.</string>
    <string name="locations_label">Locations</string>
    <string name="locations_image_label">Locations</string>
    <string name="select_store_label">Store:</string>
    <string name="select_section_label">Section</string>
    <string name="select_aisle_label">Aisle</string>
    <string name="edit_list_of_stores">Edit list of stores</string>
    <string name="edit_list_of_sections_in_store">Edit list of sections in the selected store</string>
    <string name="edit_list_of_aisles_in_store">Edit list of aisles in the selected aisle of the selected store</string>
    <string name="store_name">Store Name</string>
    <string name="new_store">New Store</string>
    <string name="aisle">Store Aisle (if applicable)</string>
    <string name="done">Done</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="Delete">Delete</string>
    <string name="conform_delete_store">Are you sure you want to delete %s?</string>
    <string name="store_in_use">%s is in use. Please delete all references to it prior to deleting.</string>
    <string name="store_aisle_in_use">%s in %s is in use. Please delete all references to it prior to deleting.</string>
    <string name="store_section_in_use">%s in %s is in use. Please delete all references to it prior to deleting.</string>
    <string name="cancel">Cancel</string>
    <string name="conform_delete_store_aisle">Are you sure you want to delete aisle %s in %s?</string>
    <string name="conform_delete_store_section">Are you sure you want to delete section %s in %s?</string>
    <string name="new_store_aisle">New Aisle</string>
    <string name="new_store_section">New Section</string>
    <string name="section">Grocery section</string>
    <string name="go_shopping">Shop</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%d pantry item</item>
        <item quantity="other">%d pantry items</item>
    </plurals>
</resources>
