<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:hint="@string/section" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <Button
            android:id="@id/ok_button"
            android:layout_marginRight="8dp"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@id/cancel_button"
            android:layout_marginRight="8dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:layout_gravity="right"
            />
    </LinearLayout>
</LinearLayout>