<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/pantry_item_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/pantry_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/pantry_item_name_hint" />

            <ImageButton
                android:id="@+id/pantry_item_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
>

        <CheckBox
            android:id="@+id/pantry_item_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantry_item_selected_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/pantry_item_selectbydefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/pantry_item_selectbydefault_label" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pantry_item_quantity_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/pantry_item_quantity"
            android:minWidth="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/pantry_item_quantity_hint" />

        <EditText
            android:id="@+id/pantry_item_quantity_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".75"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/pantry_item_quantity_unit_hint" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/pantry_item_description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="1"
        android:gravity="top|left"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pantry_item_description_hint"/>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/location_group"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locations_image_label"
            android:layout_weight="8"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_location_button"
            android:src="@drawable/ic_add_location"
            android:layout_marginRight="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/location_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">

    <Button
        android:id="@id/cancel_button"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@id/ok_button"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"/>
    </LinearLayout>

</LinearLayout>