<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/store_name"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:hint="@string/enter_store_name"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <!--<android.support.constraint.ConstraintLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--&gt;-->


        <Button
            android:id="@id/ok_button"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"/>-->

        <Button
            android:id="@id/cancel_button"
            android:layout_marginRight="8dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!--app:layout_constraintLeft_toRightOf="@id/ok_button"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->


        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:layout_gravity="right"
            />
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintLeft_toRifhtOf="@id/cancel_button" -->

    </LinearLayout>
    <!--</android.support.constraint.ConstraintLayout>-->
</LinearLayout>

